--- a/src/app.scss
+++ b/src/app.scss
@@ -6,8 +6,13 @@ body {
 
 
 header {
+    max-width: 1440px;
+    position: fixed;
+    top: 0;
     background-color: black;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
 }
 .Link {
 text-align: right;
@@ -27,8 +32,7 @@ padding: 20px;
 
 
 .Acceuil {
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 75%, rgba(126,206,255,1) 100%);
+    background: #fafafa;
     padding: 200px 50px 250px 50px;
     display: flex;
     align-items: center;
@@ -55,7 +59,7 @@ padding: 20px;
 }
 
 .Présentation {
-    background-color: #7eceff;
+    background-color: rgb(85, 85, 85);
     text-align: center;
     padding: 10px 0px 250px 0px;
     &
@@ -70,10 +74,12 @@ padding: 20px;
         font-size: 24px;
         margin-left: 20%;
         margin-right: 20%;
+        color: #fafafa;
     }
 }
 
 .Portfolio {
+    background-color: #f5f5f5;
     text-align: center;
     padding: 10px 0px 250px 0px;
      &
