--- a/src/app.scss
+++ b/src/app.scss
@@ -13,17 +13,36 @@ header {
     padding-top: 20px;
     padding-bottom: 20px;
     width: 100%;
-}
+    @media (max-width: 768px) {
+        padding-top: 10px;
+        padding-bottom: 10px;  
+    }
 
+}
 
 .Link {
 text-align: right;
+
+@media (max-width: 768px) {
+    text-align: center;
+    display: grid;
+   grid-template-columns: repeat(3, 1fr); 
+   margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
     & 
     a{
 color: white;
 text-decoration: none;
-padding: 20px;
+padding: 20px;   
+
+@media (max-width: 768px) {
+    padding: 10px;
+    font-size: 12px;
+}
 } 
+
     &
     a:hover {
         background-color: white;  
@@ -38,16 +57,33 @@ padding: 20px;
     display: flex;
     align-items: center;
     color: black;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        padding: 50px 50px 50px 50px;
+    }
         
     &
     h1 {
         margin-left: 10%; 
         font-size: 48px;
+
+        @media (max-width: 768px) {
+            margin-top: 50px;
+            margin-left: 0%;
+            font-size: 30px;
+        }
     }
     & .texte-déroulant{
         margin-left: 10%; 
         margin-right: 5%;
         font-size: 48px;
+
+        @media (max-width: 768px) {
+            margin-left: 0%;
+            margin-right: 0%;
+            font-size: 30px;
+        }
     }
     &
     img{
@@ -56,6 +92,11 @@ padding: 20px;
         border-radius: 50%;
         margin-left : auto;
         margin-right: 5%;
+
+        @media (max-width: 768px) {
+            margin-left: 0%;
+            margin-right: 0%;
+        }
     }
 }
 
@@ -63,6 +104,10 @@ padding: 20px;
     background-color: rgb(85, 85, 85);
     text-align: center;
     padding: 10px 0px 250px 0px;
+
+    @media (max-width: 768px) {
+        padding: 10px 0px 50px 0px;
+    }
     &
     h2{
         width: 100%;
@@ -70,12 +115,21 @@ padding: 20px;
         color: rgb(255, 255, 255);
         padding: 50px 0px 50px 0px;
         font-style: oblique 40deg;
+
+        @media (max-width: 768px) {
+            font-size: 30px;
+            padding: 20px 0px 20px 0px;
+        }
     }
     p{
         font-size: 24px;
         margin-left: 20%;
         margin-right: 20%;
         color: #fafafa;
+
+        @media (max-width: 768px) {
+            font-size: 16px;
+        }
     }
 }
 
@@ -86,11 +140,20 @@ padding: 20px;
     text-align: center;
     padding: 10px 0px 250px 0px;
 
+    @media (max-width: 768px) {
+        padding: 10px 0px 20px 0px;
+    }
+
     &
      h2{
         font-size: 36px;
         font-style: oblique 40deg;
         padding: 50px 0px 50px 0px;
+
+        @media (max-width: 768px) {
+            padding: 20px 0px 20px 0px;
+            font-size: 30px;
+        }
      }
 
     &
@@ -101,6 +164,12 @@ padding: 20px;
         //padding: 0px 250px 0px 250px; 
         margin-left: 13%;
 
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+            width: 100%;
+            margin-left: 8%;
+        }
+
         & a{
             text-decoration: none;
         }
@@ -109,18 +178,27 @@ padding: 20px;
 
      &      
      .cardindividuel {
-        background: rgb(0,0,0);
-        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,7,89,1) 78%);
+        
         height: 400px;
         width: 60%;
         border-radius: 25px;
         margin-left: 11.33%;
         margin-bottom: 50px;
+        background-color: white;
+
+        @media (max-width: 768px) {
+            height: 300px;
+        }
 
         &
         p{       
             font-style: italic;
-            color: white;
+            color: black;
+            font-size: 16px;
+
+            @media (max-width: 768px) {
+                font-size: 12px;
+            }
         }
    
         &
@@ -128,6 +206,7 @@ padding: 20px;
             height: 85%;
             width: 100%;
             border-radius: 25px 25px 0px 0px;
+            border-bottom:1px solid black ;
         }
 
      }
@@ -136,12 +215,16 @@ padding: 20px;
 
 .pageprojet {
     margin-top: -20px;
-    height: 100vh;
+    height: 115vh;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(250,250,250,1) 100%);
     text-align: center;
     align-items: center;
     position: relative;
+
+    @media (max-width: 768px) {
+        height: 80vh;
+    }
     &
     .flecheretour {
         position: absolute;
@@ -150,6 +233,12 @@ padding: 20px;
         height: 30px;
         padding: 5px 12px 6px 10px;
         border:1px solid white ;
+
+        @media (max-width: 768px) {
+            left: 20px;
+            top:20px;
+            height: 15px;
+        }
     }
     
     &
@@ -159,19 +248,31 @@ padding: 20px;
         color: white;
         padding-top: 60px;
         margin-bottom: 60px;
+
+        @media (max-width: 768px) {
+            font-size: 26px;
+            padding-top: 30px;
+            margin-bottom: 30px;
+        }
     }
 
     &
     p{
         margin-top: 50px;
         margin-bottom: 20px;
+
+        @media (max-width: 768px) {
+            font-size: 12px;
+            margin-top: 20px;
+        }
     }
 
     &
     .btntype{
-
         display: flex;
-    &
+        justify-content: center;
+    
+        &
         .type{
             color: #f5f5f5;
             background: rgb(0,0,0);
@@ -180,6 +281,13 @@ padding: 20px;
             padding: 10px 20px 10px 20px;
             margin-left: 15px;
             margin-right: 15px;
+
+            @media (max-width: 768px) {
+                padding: 10px 10px 10px 10px;
+                margin-left: 10px;
+                margin-right: 10px;
+                font-size: 12px;
+            }
         }
 }   
 }
@@ -194,10 +302,20 @@ padding: 20px;
     margin-left: auto;
     margin-right: auto;
 
+    @media (max-width: 768px) {
+        width: 90%;
+        height: 400px;
+    }
+
     &
     img{
         width: 100%;
         height: 600px;
+
+        @media (max-width: 768px) {
+            width: 100%;
+            height: 400px;
+        }
     }
 
 }    
@@ -214,6 +332,11 @@ padding: 20px;
     right: 30px;
     width: 50px; 
     height: 80px;
+
+    @media (max-width: 768px) {
+        width: 20px; 
+        height: 30px;
+    }
 }
 
 .flechegauche img {
@@ -223,7 +346,13 @@ padding: 20px;
     left: 30px;
     width: 50px; 
     height: 80px;
+
+    @media (max-width: 768px) {
+        width: 20px; 
+        height: 30px;
+    }
 }
+
 
 .Competences {
     background-color: rgb(85, 85, 85);
@@ -232,12 +361,20 @@ padding: 20px;
     margin-left: auto;
     margin-right: auto;
 
+    @media (max-width: 768px) {
+        padding: 10px 0px 50px 0px;
+    }
+
     &
     h2{
         font-size: 36px;
         font-style: oblique 40deg;
         padding: 50px 0px 50px 0px;
         color: #fafafa;
+
+        @media (max-width: 768px) {
+            padding: 10px 0px 20px 0px;
+        }
     }
 
     &
@@ -258,6 +395,11 @@ padding: 20px;
     margin-left: auto;
     margin-right: auto;
 
+    @media (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+
     &
     .hardskill{
         width: 70%;
@@ -266,10 +408,20 @@ padding: 20px;
         border-radius: 25px;
         margin-left: 12%;
 
+        @media (max-width: 768px) {
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 50px;
+        }
+
         &
         .textehard{
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+
+            @media (max-width: 768px) {
+
+            }
 
             &
             svg{
@@ -285,6 +437,11 @@ padding: 20px;
         border-radius: 25px;
         padding: 20px 0px 20px 0px;
         margin-left: 17%;
+
+        @media (max-width: 768px) {
+            margin-left: auto;
+            margin-right: auto;
+        }
 
         &
         p{
@@ -303,11 +460,20 @@ padding: 20px;
     margin-left: auto;
     margin-right: auto;
 
+    @media (max-width: 768px) {
+        padding: 10px 0px 50px 0px;
+    }
+
     &
     h2{
         font-size: 36px;
         font-style: oblique 40deg;
         padding: 50px 0px 50px 0px;
+
+        
+        @media (max-width: 768px) {
+            padding: 10px 0px 0px 0px;
+        }
 
     }
 
@@ -320,6 +486,12 @@ padding: 20px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 50px;
+
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+            width: 100%;
+            padding-bottom: 20px;
+        }
     }
 
     &
@@ -331,6 +503,11 @@ padding: 20px;
     a{
         text-decoration: none;
         width: 60%;
+
+        @media (max-width: 768px) {
+            width: 50%;
+        }
+
     }
 
     &
@@ -343,6 +520,13 @@ padding: 20px;
         border:1px solid black ;
         border-radius: 25px;
         align-items: center;
+
+        @media (max-width: 768px) {
+            padding: 10px 0px 10px 0px;
+            margin-top: 20px;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
         &
         svg{
@@ -374,9 +558,19 @@ footer{
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: 768px) {
+        padding: 10px 5% 20px 5%;
+        flex-direction: column;
+        align-items: center;
+    }
+
     &
     p{
         color: #fafafa;
+
+        @media (max-width: 768px) {
+            margin-bottom: 20px;
+        }
     }
 
     &
@@ -387,5 +581,12 @@ footer{
         border-radius: 50%;
         padding: 10px;
         font-size: 20px;
+
+        @media (max-width: 768px) {
+            padding: 5px;
+            font-size: 15px;
+        }
+    
 }
 }
+
